changed the browser

--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,6 @@ url=http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/Login.a
 username=Tester
 password=test
 implicit.wait=5
-browser=chrome
+browser=safari
 
 
